--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -12,7 +12,7 @@
 
 <style lang="scss">
     .cv-layout {
-        background-color: #f5f5d5;
+        background-color: #dbecfb;
         height: 100%;
         display: flex;
         flex-direction: column;
